force-app/main/default/objects/refedge__Account_Attribute__c/fields/refedge__Attribute__c.field-meta.xml
<CustomField>
    <fullName>refedge__Attribute__c</fullName>
    <label>Attribute</label>
    <referenceTo>refedge__Attribute__c</referenceTo>
    <relationshipLabel>Account Attributes</relationshipLabel>
    <relationshipName>Account_Attributes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>