force-app/main/default/objects/refedge__Account_Attribute__c/fields/refedge__Contact__c.field-meta.xml
<CustomField>
    <fullName>refedge__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Attributes</relationshipLabel>
    <relationshipName>Account_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>