force-app/main/default/objects/refedge__Account_Attribute__c/fields/refedge__Inheritable__c.field-meta.xml
<CustomField>
    <fullName>refedge__Inheritable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this checkbox is selected this attribute will be automatically inherited by related Contacts and Reference Content.</description>
    <inlineHelpText>When this checkbox is selected this attribute will be automatically inherited by related Contacts and Reference Content.</inlineHelpText>
    <label>Inheritable</label>
    <type>Checkbox</type>
</CustomField>